--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,8 @@
 --logo-text-color:#4d5ae5;
 --hover-focus-color:#404bbf;
 --border-color-btn:#E7E9FC;
+--border-color-secondary:#8E8F99;
+--hover-secondary-color:#31D0AA;
 
 
 
@@ -80,6 +82,7 @@ img {
 /* Header styles*/
 .header {   
     border-bottom: 1px solid #E7E9FC;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
     
 
 }
@@ -190,9 +193,13 @@ color:var(--hover-focus-color);
 }
 
 /* Hero styles */
-.hero {
+.hero-section {
+   
     background-color: var(--title-text-color);
     padding: 188px 0;
+    background-image:linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/goit-hw-4/images/people-office.jpg) ;
+    background-repeat: no-repeat;
+    background-size: cover;
     
    
 }
@@ -226,7 +233,8 @@ color:var(--hover-focus-color);
     padding: 16px 32px;
     border-radius: 4px;
 border: none;
-min-width: 169px
+min-width: 169px;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
    
 }
@@ -251,6 +259,17 @@ min-width: 169px
 .list-adv {
     display: flex;
     gap: 24px;
+}
+.icon-adv{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--secondary-bg-cl);
+    width: 264px;
+height: 112px;
+border-radius: 4px;
+margin-bottom: 8px;
+
 }
 
 .subtitle-adv {
@@ -289,7 +308,7 @@ min-width: 169px
     gap: 24px;
 }
 .image-item{
-    width: calc((100%-48px)/3); 
+    width: calc((100% - 48px)/3); 
 }
 
 /* Section Our Team */
@@ -297,6 +316,34 @@ min-width: 169px
     background-color:var(--secondary-bg-cl);
     
 }
+.svg-list{
+    display: flex;
+    justify-content: center;
+  
+    gap: 24px;
+    margin-top: 8px;
+}
+.icon-svg{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: #FFFFFF;
+    background-color: var(--logo-text-color);
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    
+}
+.icon-svg:hover,
+.icon-svg:focus{
+    background-color: var(--hover-focus-color);
+}
+.img-svg{
+    width: 40px;
+   height: 40px;
+}
+
+
 .team-list{
     display: flex;
     gap: 24px;
@@ -317,9 +364,10 @@ min-width: 169px
     
 }
 .item-team{
-    width: calc((100%-72px)/4);
+    width: calc((100% - 72px)/4);
     background-color: var(--main-bg-color);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .subtitle-team{
     text-align: center;
@@ -337,6 +385,37 @@ min-width: 169px
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--primary-text-color);
+   
+}
+/* <!-- Customers --> */
+.customers{
+
+    padding: 120px 0;
+}
+.customers-list{
+    display: flex;
+    justify-content: center;
+    
+    gap: 24px;
+}
+.customers-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+width: 100%;
+height: 100%;
+fill: var(--border-color-secondary);
+border: 1px solid var(--border-color-secondary);
+border-radius: 4px;
+}
+.customers-icon:hover,
+.customers-icon:focus{
+    fill: var(--hover-focus-color);
+    border-color: var(--hover-focus-color);
+}
+.customers-item{
+    width: 168px;
+    height: 88px;
    
 }
 
@@ -369,6 +448,42 @@ min-width: 169px
     letter-spacing: 0.02em;
     width: 264px;
 }
+.footer-container{
+    display: flex;
+    align-items: baseline;
+
+}
+.footer-list{
+    display: flex;
+    gap: 16px;
+}
+.footer-item{
+    width: 40px;
+    height: 40px;
+}
+.footer-social{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    fill: var(--main-bg-color);
+    background-color: var(--logo-text-color);
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+
+}
+.footer-social:hover,
+.footer-social:focus{
+    background-color: var(--hover-secondary-color);
+}
+.footer-div{
+    margin-left: 120px;
+}
+.footer-text{
+    font-weight: 500;
+    color: var(--main-bg-color);
+    margin-bottom: 16px;
+}
 /* PORTFOLIO */
 .buttons-potfolio{
     display: flex;
@@ -393,16 +508,14 @@ border: 1px solid #e7e9fc;
 border-radius: 4px;
 padding: 12px 24px;
 }
-.btn:hover{
-    color: var(--main-bg-color);
-    background-color: var(--hover-focus-color);
-    border: 1px solid transparent;
-}
+.btn:hover,
 .btn:focus{
     color: var(--main-bg-color);
     background-color: var(--hover-focus-color);
     border: 1px solid transparent;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+
 .title-pic{ 
     margin-bottom: 8px;
     font-weight: 500;
@@ -419,15 +532,25 @@ padding: 12px 24px;
 }
 .pictures-portfolio{
     display: flex;
-    flex-wrap: wrap;
     gap: 24px;
     row-gap: 48px;
+    flex-wrap: wrap;
+
+   
 }
 .image-item{
-    width: calc((100%-48px)/3);
+    width: calc((100% - 48px)/3);
+
+    
+}
+.image-item:hover,
+.image-item:focus{
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+
 }
 .image-description{
+    
     border: 1px solid var(--border-color-btn);
     border-top: none;
-    padding: 32px 16px
+    padding: 32px 16px;
 }
