--- a/css/styles.css
+++ b/css/styles.css
@@ -194,12 +194,13 @@ color:var(--hover-focus-color);
 
 /* Hero styles */
 .hero-section {
-   
+    max-width: 1440px;
     background-color: var(--title-text-color);
     padding: 188px 0;
     background-image:linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/goit-hw-4/images/people-office.jpg) ;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     
    
 }
@@ -360,8 +361,11 @@ margin-bottom: 8px;
 
 }
 .team-cards{
-    padding: 32px 16px ;
+    padding: 32px 0;
     
+}
+.team-svg{
+    fill: var(--secondary-bg-cl);
 }
 .item-team{
     width: calc((100% - 72px)/4);
@@ -477,12 +481,17 @@ border-radius: 4px;
     background-color: var(--hover-secondary-color);
 }
 .footer-div{
-    margin-left: 120px;
+    margin-right: 120px;
 }
 .footer-text{
     font-weight: 500;
     color: var(--main-bg-color);
     margin-bottom: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+.footer-svg{
+    fill: var(--secondary-bg-cl);
 }
 /* PORTFOLIO */
 .buttons-potfolio{
@@ -515,7 +524,10 @@ padding: 12px 24px;
     border: 1px solid transparent;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+.pics-link{
+    display: block;
 
+}
 .title-pic{ 
     margin-bottom: 8px;
     font-weight: 500;
@@ -543,8 +555,8 @@ padding: 12px 24px;
 
     
 }
-.image-item:hover,
-.image-item:focus{
+.pics-link:hover,
+.pics-link:focus{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 
 }
